# async-dispatcher-lib

./: Cargo.toml  readme.md
examples/: legion_example.rs  minimum_example.rs  shred_example.rs
src/: legion_example.rs  lib.rs  main.rs  minimum_example.rs  requires_resources_shred.rs  shred_example.rs
src/async_dispatcher/: acquire_resources.rs  dispatcher.rs  legion.rs  minimum.rs  mod.rs  required_resources.rs  resource_id.rs  shred.rs
src/async_dispatcher/support/: legion.rs  minimum.rs  mod.rs  shred.rs
src/minimum/: mod.rs  trust_cell.rs
