[package]
name = "async-dispatcher"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hashbrown = "0.5.0"
futures = "0.1"
tokio = "0.1"

# legion support (requires this patch):
#
# a/src/storage.rs
#-trait ComponentStorage: Downcast + Debug {
#+trait ComponentStorage: Downcast + Debug + Send {
legion = { path = '/Users/philipd/dev/rust/legion' }

# shred support
shred = "0.9.2"

# minimum support
mopa = "0.2"